--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <table>
     <tr>
       <th>City</th>
-      <th>Statw</th>
+      <th>State</th>
       <th>2017 estimate</th>
     </tr>
     <tr>
